# RAG-HP-PUB

./: --.mcp.json  -.mcp.json  -a.mcp.json  .gitignore  .mcp copy 2.json  .mcp copy.json  .mcp-.json  .mcp.json  20170222163859_1-bon_de_cde_2017.xls  API-CLASSIFICATION-V2-SETUP.md  CLAUDE.md  GEMINI.md  PRODUCT_DATABASE_ANALYSIS.md  README.md  VECTORIAL_SEARCH_CONFIG_SUMMARY.md  WEBHOOK_EXAMPLE.md  docker-compose.yml  generate_fournisseurs.py  generate_fournisseurs_v2.py  pyrefly.toml  requirements.txt
.claude/: settings.json
.codebase/: config.php  index.php  input.csv  input_.csv  mcp_handler.php  semantic.py
apps-microservices/graph-rag-api-recherche-rust-service/: CLAUDE.md  Cargo.toml  Dockerfile  build.rs
apps-microservices/graph-rag-api-recherche-rust-service/src/: config.rs  main.rs
apps-microservices/graph-rag-api-recherche-rust-service/src/domain/: models.rs
apps-microservices/graph-rag-api-recherche-rust-service/src/grpc_clients/: graph_database.rs  graph_normalization.rs  mod.rs
apps-microservices/graph-rag-api-recherche-rust-service/src/infrastructure/: clients.rs  gemini_client.rs  hellopro_api_client.rs  llm_service.rs  mod.rs
apps-microservices/graph-rag-api-recherche-rust-service/src/routers/: admin.rs  fournisseur.rs  mod.rs  nodes.rs  product.rs  query.rs  recommendation.rs
apps-microservices/graph-rag-api-recherche-rust-service/src/services/: cypher_builder.rs  cypher_step2_scoring.cypher  fournisseur_service.rs  mod.rs  node_service.rs  product_service.rs  rag_components.rs  rag_service.rs  recommendation_service.rs
docs/: plan.md  (+11 more)
(+3568 files in other folders)
