[package]
name = "graph-rag-api-recherche-rust-service"
version = "1.0.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Neo4j direct driver
neo4rs = "0.8"

# OpenAPI / Swagger
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "8", features = ["actix-web"] }

# Configuration
dotenvy = "0.15"
envy = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
log = "0.4"
env_logger = "0.11"

# Utilities
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
once_cell = "1"
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.12"
